...
            return "treesUpdate"
        case .privacy:
            return "privacy"
        }
    }

    var url: URL {
        switch self {
        case .financialReports:
            return Environment.current.urlProvider.financialReports
        case .trees:
            return Environment.current.urlProvider.trees
        case .privacy:
...
